# laboratory8

./: Laboratory8.sln
Laboratory6/: CMakeLists.txt  DynamicArray.cpp  DynamicArray.h  DynamicArrayTest.cpp  DynamicArrayTest.h  FilteringCriteria.cpp  FilteringCriteria.h  FilteringPrice.cpp  FilteringPrice.h  FilteringTest.cpp  FilteringTest.h  FilteringType.cpp  FilteringType.h  FilteringTypeAndPrice.cpp  FilteringTypeAndPrice.h  Laboratory6.vcxproj  Laboratory6.vcxproj.filters  Menu.cpp  Menu.h  Offer.h  OfferTest.h  OutOfBoundsException.h  main.cpp
Laboratory8/: DynamicArrayTest.cpp  FilteringCriteria.h  FilteringTypeAndPrice.h  Menu.h  Offer.cpp  OfferTest.cpp  OutOfBoundsException.cpp  main.cpp
